KSail.Tests/Commands/Gen/ingress-class.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: <name>
spec:
  controller: <controller>
  parameters:
    kind: <kind>
    name: <name>
