KSail.Tests/Commands/Gen/validating-admission-policy-binding.yaml.verified.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: <name>
spec:
  paramRef:
    name: <name>
    namespace: <namespace>
  policyName: <policyName>
  validationActions: []
