KSail.Tests/Commands/Gen/validating-admission-policy.yaml.verified.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: <name>
spec:
  auditAnnotations: []
  validations: []
