KSail.Tests/Commands/Gen/validating-webhook-configuration.yaml.verified.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: <name>
webhooks: []
